added meal cart

--- a/index.html
+++ b/index.html
@@ -51,15 +51,22 @@
       <!-- Logo Section -->
       <section class="logo-section">
         <div class="container">
-          <h2 class="logo-header"> As featured In</h2>
+          <h2 class="logo-header">As featured In</h2>
           <div class="logo-img-box">
-            <img src="img/logos/business-insider.png" alt="logo" class="logo-img">
-            <img src="img/logos/forbes.png" alt="logo" class="logo-img">
-            <img src="img/logos/techcrunch.png" alt="logo" class="logo-img">
-            <img src="img/logos/the-new-york-times.png" alt="logo" class="logo-img">
-            <img src="img/logos/usa-today.png" alt="logo" class="logo-img">
+            <img
+              src="img/logos/business-insider.png"
+              alt="logo"
+              class="logo-img"
+            />
+            <img src="img/logos/forbes.png" alt="logo" class="logo-img" />
+            <img src="img/logos/techcrunch.png" alt="logo" class="logo-img" />
+            <img
+              src="img/logos/the-new-york-times.png"
+              alt="logo"
+              class="logo-img"
+            />
+            <img src="img/logos/usa-today.png" alt="logo" class="logo-img" />
           </div>
-
         </div>
       </section>
 
@@ -128,6 +135,52 @@
               class="step-img"
               alt="iphone app preference selection screen"
             />
+          </div>
+        </div>
+      </section >
+
+      <section class="meals-section">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Bhuiyan kichen AI chooses from 5,000+ recipes.
+          </h2>
+        </div>
+
+        <div class="container grid grid--3--cols gap">
+          <div class="meals ">
+            <img src="/img/meals/meal-1.jpg" class="meals-img" alt="" />
+
+            <div class="meals-description">
+            <span class="tag">Vegetarian</span>
+            <h2 class="meals-heading">Japanese Gyozas</h2>
+            <ul class="meals-list">
+              <li>Calories: 650</li>
+              <li>NutriScore: 74</li>
+              <li>rating: 4.9</li>
+              <li>reviews: 537</li>
+            </ul>
+            </div>
+          </div>
+
+          <div class="meals">
+            <img src="/img/meals/meal-2.jpg" class="meals-img" alt="" />
+
+            <div class="meals-description">
+              <span class="tag">Vegan Paleo</span>
+              <span class="tag">Paleo</span>
+              <h2 class="meals-heading">Avocado Salad</h2>
+              <ul class="meals-list">
+                <li>Calories: 400</li>
+                <li>NutriScore: 92</li>
+                <li>rating: 4.8</li>
+                <li>reviews: 441</li>
+              </ul>
+            </div>
+            </div>
+
+
+            <span>three</span>
           </div>
         </div>
       </section>
