--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       />
       <nav class="navigation">
         <ul class="unordered-list">
-          <li><a href="#" class="list"> Section 1</a></li>
-          <li><a href="#" class="list"> Section 2</a></li>
-          <li><a href="#" class="list"> Section 3</a></li>
-          <li><a href="#" class="list"> Section 4</a></li>
-          <li><a href="#" class="list list-5"> Section 5</a></li>
+          <li><a href="#" class="list"> How it Works</a></li>
+          <li><a href="#logo-section" class="list">Meals</a></li>
+          <li><a href="#" class="list">Testimonials</a></li>
+          <li><a href="#" class="list">Pricing</a></li>
+          <li><a href="#" class="list list-5">Try free</a></li>
         </ul>
       </nav>
     </header>
@@ -49,7 +49,7 @@
         </div>
       </section>
       <!-- Logo Section -->
-      <section class="logo-section">
+      <section id="logo-section">
         <div class="container">
           <h2 class="logo-header">As featured In</h2>
           <div class="logo-img-box">
@@ -185,5 +185,54 @@
         </div>
       </section>
     </main>
+
+
+    <footer class="footer-section">
+      <div class="container grid grid--5--cols " style="justify-items: center; column-gap: 2rem;" >
+        <div class="subfooter">
+        <img src="/img/logos/bhuiyan_kichen-removebg-preview.png" class="footer-logo">
+        <div class="icon">
+        <ion-icon name="logo-instagram" class="icon-logo"></ion-icon>
+        <ion-icon name="logo-facebook" class="icon-logo" ></ion-icon>
+        <ion-icon name="logo-twitter" class="icon-logo"></ion-icon>
+        </div>
+        <p>copyright @2023 by bhuiyanfoods.<br> Inc. All rights reservered.</p>
+
+        </div>
+
+        <div class="subfooter">
+        <h4>Contact us</h4>
+        <p>699 Uttara,flat no 333,Dhaka</p>
+        <p>880-1723456765</p>
+        <p>hi@bhuiayaKichen.com </p>
+        </div>
+
+        <div class="subfooter">
+        <h4>Account </h4>
+        <p>Create Account</p>
+        <p>Sign in</p>
+        <p>Android App</p>
+        <p>IOS App</p>
+        </div>
+        <div class="subfooter">
+        <h4>Company</h4>
+        <p>About BhuiyaKichen</p>
+        <p>For Business</p>
+        <p>Cooking Partners</p>
+        <p>Careers</p>
+
+      </div>
+
+        <div class="subfooter"><h4>Resource</h4>
+          <p>Recipe directory</p>
+          <p>Help center</p>
+          <p>Privacy and terms</p>
+        </div>
+        
+
+
+      </div>
+    </footer>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
