Responsive with Media queries part 1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -138,7 +140,8 @@
           </div>
         </div>
       </section >
-
+      
+      <!--Meals Section  -->
       <section class="meals-section">
         <div class="container">
           <span class="subheading">Meals</span>
