--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div class="container grid grid--3--cols gap">
           <div class="meals ">
-            <img src="/img/meals/meal-1.jpg" class="meals-img" alt="" />
+            <img src="img/meals/meal-1.jpg" class="meals-img" alt="" />
 
             <div class="meals-description">
             <span class="tag">Vegetarian</span>
@@ -167,7 +167,7 @@
           </div>
 
           <div class="meals">
-            <img src="/img/meals/meal-2.jpg" class="meals-img" alt="" />
+            <img src="img/meals/meal-2.jpg" class="meals-img" alt="" />
 
             <div class="meals-description">
               <span class="tag">Vegan Paleo</span>
@@ -207,7 +207,7 @@
     <footer class="footer-section">
       <div class="container grid grid--5--cols " style="justify-items: center; column-gap: 2rem;" >
         <div class="subfooter">
-        <img src="/img/logos/bhuiyan_kichen-removebg-preview.png" class="footer-logo">
+        <img src="img/logos/bhuiyan_kichen-removebg-preview.png" class="footer-logo">
         <div class="icon">
         <ion-icon name="logo-instagram" class="icon-logo"></ion-icon>
         <ion-icon name="logo-facebook" class="icon-logo" ></ion-icon>
